--- a/style.css
+++ b/style.css
@@ -5,7 +5,28 @@
 }
 
 body {
-  background-color: rgb(62, 158, 248);
+  background-color: #4766a0;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  line-height: 1.8;
+}
+
+a {
+  text-decoration: none;
+}
+
+span {
+  color: rgb(186, 130, 238);
+  font-weight: bold;
+}
+
+span a {
+  color: rgb(186, 130, 238);
+  font-weight: bold;
+}
+
+span:hover {
+  border-bottom: 2px solid #333333;
 }
 
 header,
@@ -14,13 +35,18 @@ footer {
   text-align: center;
 }
 
+span:hover {
+  border-bottom: #333333 2px solid;
+}
+
 .containter_content {
   max-width: 450px;
-  margin: 30px auto;
+  margin: 40px auto;
   background-color: #f2f2f2;
-  font-family: "Roboto", sans-serif;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  color: #333333;
+  border-radius: 5px;
 }
 
 .containter_content #free {
@@ -32,31 +58,33 @@ footer {
   max-width: 80%;
   margin: 10px auto;
   padding: 10px;
+  background-color: #f2f2f2;
   text-align: left;
+  border-radius: 4px;
+  color: #333333;
 }
 
 .containter_content .signup input {
   display: block;
   width: 100%;
   margin-bottom: 10px;
+  padding: 8px;
+  border: #ccc 1px solid;
+  border-radius: 4px;
 }
 
 .btn_signup {
   padding: 10px;
-  background-color: rgb(0, 214, 214);
+  background-color: #648fdf;
   border: none;
   width: 100%;
   margin-top: 30px;
   font-size: 25px;
   color: #333333;
+  border-radius: 10px;
 }
 
 footer {
   max-width: 70%;
   margin: auto;
-}
-
-footer span {
-  color: rgb(186, 130, 238);
-  font-weight: bold;
 }
